# dcf77-transmiter-hantek-6074bd

./: .gitignore  CMakeLists.txt  README.md  main.cpp
HT6004BX_SDK/Code Demo/VCDSO/: VCDSO.vcxproj
HT6004BX_SDK/HeadFiles/: HTHardDll.h  HTSoftDll.h
HT6004BX_SDK/HeadFiles_UTF8/: HTHardDll.h
